<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/profile" />

    <Button
        android:id="@+id/btnSeeAllBooks"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/see_all"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnCurrentlyReading"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/currently_Reading"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnSeeAllBooks"
        app:layout_constraintStart_toStartOf="@+id/btnSeeAllBooks"
        app:layout_constraintTop_toBottomOf="@+id/btnSeeAllBooks" />

    <Button
        android:id="@+id/btnAlreadyRead"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/already_read"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnCurrentlyReading"
        app:layout_constraintStart_toStartOf="@+id/btnCurrentlyReading"
        app:layout_constraintTop_toBottomOf="@+id/btnCurrentlyReading" />

    <Button
        android:id="@+id/btnWishList"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/wish_list"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnAlreadyRead"
        app:layout_constraintStart_toStartOf="@+id/btnAlreadyRead"
        app:layout_constraintTop_toBottomOf="@+id/btnAlreadyRead" />

    <Button
        android:id="@+id/btnFavorite"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/favorites"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnWishList"
        app:layout_constraintStart_toStartOf="@+id/btnWishList"
        app:layout_constraintTop_toBottomOf="@+id/btnWishList" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnFavorite"
        app:layout_constraintStart_toStartOf="@+id/btnFavorite"
        app:layout_constraintTop_toBottomOf="@+id/btnFavorite" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfilePic" />

    <TextView
        android:id="@+id/tvDeveloped"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/miniver"
        android:text="@string/develop"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>